--- a/app/src/main/res/layout/layout_add_notification.xml
+++ b/app/src/main/res/layout/layout_add_notification.xml
@@ -1,48 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent" android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <EditText
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/note_text"
-        android:inputType="textMultiLine"
-        android:layout_margin="10dp"
-        android:background="@drawable/text_view_add_course"
-        android:padding="10dp"
-        android:hint="@string/enter_a_message"
-        android:textColorHint="@color/GreyDark"
-        android:textColor="@color/colorBlack"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="100"
-        android:orientation="horizontal"
-        android:layout_below="@id/note_text">
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="50"
-            android:text="@string/post"
-            android:background="@drawable/btn_blue"
-            android:layout_margin="5dp"
-            android:textColor="@color/colorWhite"
-            android:clickable="true"
-            android:focusable="true"
-            tools:ignore="ButtonStyle"
-            android:id="@+id/btn_post"/>
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="50"
-            android:text="@string/cancel"
-            android:background="@drawable/btn_blue"
-            android:layout_margin="5dp"
-            android:textColor="@color/colorWhite"
-            android:clickable="true"
-            android:focusable="true"
-            tools:ignore="ButtonStyle"
-            android:id="@+id/btn_cancel"/>
-    </LinearLayout>
+        android:layout_height="wrap_content">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/note_text"
+                android:inputType="textMultiLine"
+                android:layout_margin="10dp"
+                android:background="@drawable/text_view_add_course"
+                android:padding="10dp"
+                android:hint="@string/enter_a_message"
+                android:textColorHint="@color/GreyDark"
+                android:textColor="@color/colorBlack"
+                android:focusedByDefault="true"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="100"
+                android:orientation="horizontal"
+                android:layout_below="@id/note_text">
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="50"
+                    android:text="@string/post"
+                    android:background="@drawable/btn_blue"
+                    android:layout_margin="5dp"
+                    android:textColor="@color/colorWhite"
+                    android:clickable="true"
+                    android:focusable="true"
+                    tools:ignore="ButtonStyle"
+                    android:id="@+id/btn_post"/>
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="50"
+                    android:text="@string/cancel"
+                    android:background="@drawable/btn_blue"
+                    android:layout_margin="5dp"
+                    android:textColor="@color/colorWhite"
+                    android:clickable="true"
+                    android:focusable="true"
+                    tools:ignore="ButtonStyle"
+                    android:id="@+id/btn_cancel"/>
+            </LinearLayout>
+        </RelativeLayout>
+    </ScrollView>
+
+
 </RelativeLayout>
