--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -58,7 +58,7 @@
         android:layout_marginVertical="3dp"
         android:weightSum="100"
         android:id="@+id/more"
-        android:visibility="gone">
+        android:visibility="visible">
         <TextView
             android:id="@+id/name"
             android:layout_width="match_parent"
@@ -81,7 +81,7 @@
             android:layout_gravity="center"
             android:padding="3dp"
             android:gravity="center_vertical"/>
-        <TextView
+        <Button
             android:id="@+id/btn_edit_profile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -97,6 +97,7 @@
             app:drawableTint="@color/colorAccent"
             android:gravity="center_vertical"
             android:clickable="true"
-            android:focusable="true"/>
+            android:focusable="true"
+            android:background="@color/transparent"/>
     </LinearLayout>
 </RelativeLayout>
