--- a/app/src/main/res/layout/teachers_viewof_course_notifications.xml
+++ b/app/src/main/res/layout/teachers_viewof_course_notifications.xml
@@ -27,9 +27,7 @@
         android:orientation="vertical"
         android:layout_below="@id/textNotifications"
         android:layout_marginTop="24dp"
-        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-        android:padding="10dp"
-        android:background="@drawable/text_view_login"/>
+        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"/>
     <!-- End DisplayOnClickingResourcesButton -->
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
