--- a/app/src/main/res/layout/layout_notification.xml
+++ b/app/src/main/res/layout/layout_notification.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     android:padding="15dp"
     android:background="@drawable/sender_messages_layout"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    android:id="@+id/container">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
