teacher class management view added

--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -96,7 +96,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/colorWhite"
-        android:background="@color/colorPrimary"
         android:elevation="4dp"
         android:text="@string/save"
         android:letterSpacing="0.3"
@@ -104,6 +103,7 @@
         android:layout_centerHorizontal="true"
         android:id="@+id/updateChange"
         android:clickable="true"
-        android:focusable="true"/>
+        android:focusable="true"
+        android:backgroundTint="@color/colorPrimary"/>
     
 </RelativeLayout>
