--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -120,7 +120,7 @@
                 android:layout_marginBottom="16dp"
                 android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                 android:background="@drawable/btn_blue"
-                android:backgroundTint="#00C853"
+                android:backgroundTint="@color/button_green"
                 android:textColor="@color/colorWhite"
                 android:letterSpacing="0.1"
                 android:enabled="true"
