--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -520,6 +520,7 @@
         android:layout_margin="24dp"
         android:layout_above="@id/add_course_progress"
         android:background="@drawable/btn_blue"
+        android:backgroundTint="@color/button_green"
         android:textColor="@color/colorWhite"
         android:textSize="@dimen/text_margin"
         android:text="@string/next"
