--- a/app/src/main/res/layout-v26/activity_add_course.xml
+++ b/app/src/main/res/layout-v26/activity_add_course.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".AddCourseActivity">
+    tools:context=".AddCourseActivity"
+    android:theme="@style/MaterialTheme">
 
     <!--
     <TextView
@@ -31,15 +32,22 @@
         android:layout_marginTop="6dp"
         android:visibility="gone"
         android:layout_centerHorizontal="true"
-        android:indeterminateTint="@color/colorPrimary"/>
+        android:indeterminateTint="@color/colorPrimary"
+        android:layout_alignParentTop="true"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:id="@+id/view"
+        android:layout_alignParentTop="true"
+        android:layout_below="@id/loadingAddCourse"/>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/loadingAddCourse"
-        android:layout_alignParentTop="true"
+        android:layout_below="@id/view"
         android:layout_above="@id/btnNext"
-        android:layout_margin="@dimen/activity_horizontal_margin">
+        android:layout_marginTop="24dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -62,48 +70,111 @@
                     android:layout_height="160dp"
                     android:layout_gravity="center_horizontal"
                     android:maxHeight="160dp"
-                    android:src="@drawable/background"
+                    android:src="@drawable/lightlogo2"
                     android:id="@+id/imgAddCourseImage"
                     android:scaleType="centerCrop"
-                    tools:ignore="ContentDescription" />
+                    tools:ignore="ContentDescription"
+                    android:background="@drawable/text_view_add_course"/>
 
                 <ImageView
-                    android:id="@+id/btnAddCourseImage"
-                    android:layout_width="34dp"
+                    android:layout_width="40dp"
                     android:layout_height="40dp"
+                    android:id="@+id/btnAddCourseImage"
+                    android:src="@drawable/icon_add_photo"
                     android:layout_gravity="end"
                     android:layout_margin="12dp"
-                    android:src="@drawable/icon_add_photo"
-                    app:tint="@color/colorAccent"
-                    tools:ignore="ContentDescription" />
+                    tools:ignore="ContentDescription"
+                    app:tint="@color/colorPrimary"/>
 
             </FrameLayout>
 
-            <EditText
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/course_name"
-                android:inputType="text"
-                android:textColorHint="@color/colorGrey"
-                android:textColor="@color/colorBlack"
-                android:background="@drawable/text_view_add_course"
-                android:padding="10dp"
-                android:layout_marginHorizontal="@dimen/text_margin"
-                android:layout_marginVertical="4dp"
-                android:id="@+id/add_course_name" />
-
-            <EditText
+                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+                android:id="@+id/ll1"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginTop="4dp"
+                app:boxBackgroundColor="@color/transparent">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/add_course_name"
+                    android:inputType="text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textColor="@color/colorBlack"
+                    android:selectAllOnFocus="true"/>
+            </com.google.android.material.textfield.TextInputLayout>
+            <!--            <EditText-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:hint="@string/course_name"-->
+            <!--                android:inputType="text"-->
+            <!--                android:textColorHint="@color/colorGrey"-->
+            <!--                android:textColor="@color/colorBlack"-->
+            <!--                android:background="@drawable/text_view_add_course"-->
+            <!--                android:padding="10dp"-->
+            <!--                android:layout_marginHorizontal="@dimen/text_margin"-->
+            <!--                android:layout_marginVertical="4dp"-->
+            <!--                android:id="@+id/add_course_name"-->
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/course_description"
-                android:textColorHint="@color/colorGrey"
-                android:textColor="@color/colorBlack"
-                android:inputType="textMultiLine"
-                android:background="@drawable/text_view_add_course"
-                android:padding="10dp"
-                android:layout_marginHorizontal="@dimen/text_margin"
-                android:layout_marginVertical="4dp"
-                android:id="@+id/add_course_description"/>
+                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+                android:id="@+id/ll2"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginTop="4dp"
+                app:boxBackgroundColor="@color/transparent">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/add_course_description"
+                    android:inputType="textMultiLine"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textColor="@color/colorBlack"
+                    android:selectAllOnFocus="true"/>
+            </com.google.android.material.textfield.TextInputLayout>
+            <HorizontalScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <com.google.android.material.chip.ChipGroup
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/MaterialTheme"
+                    app:singleLine="true">
+                    <com.google.android.material.chip.Chip
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="@style/Widget.MaterialComponents.Chip.Entry"
+                        android:text="@string/app_name"
+                        android:textSize="@dimen/text_margin"
+                        app:chipIconEnabled="false"
+                        app:checkedIconEnabled="false"
+                        app:chipIcon="@color/colorRed"/>
+                    <com.google.android.material.chip.Chip
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="@style/Widget.MaterialComponents.Chip.Entry"
+                        android:text="@string/app_name"
+                        android:textSize="@dimen/text_margin"/>
+                    <com.google.android.material.chip.Chip
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="@style/Widget.MaterialComponents.Chip.Entry"
+                        android:text="@string/app_name"
+                        android:textSize="@dimen/text_margin"/>
+                    <com.google.android.material.chip.Chip
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="@style/Widget.MaterialComponents.Chip.Entry"
+                        android:text="@string/app_name"
+                        android:textSize="@dimen/text_margin"/>
+                </com.google.android.material.chip.ChipGroup>
+            </HorizontalScrollView>
 
             <Button
                 android:id="@+id/add_course_category"
@@ -113,10 +184,11 @@
                 android:layout_marginHorizontal="@dimen/text_margin"
                 android:layout_marginVertical="10dp"
                 android:background="@drawable/btn_blue"
+                android:backgroundTint="@color/button_green"
                 android:elevation="100dp"
                 android:textColor="@color/colorWhite"
                 android:textSize="@dimen/text_margin"
-                android:drawableStart="@drawable/add_icon_48"
+                android:drawableStart="@drawable/add_icon_24"
                 android:drawableTint="@color/colorWhite"
                 android:layout_gravity="center_horizontal"
                 android:paddingHorizontal="10dp"
@@ -148,7 +220,6 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/selectedCategoriesDisplayGroup"
                     style="@style/MaterialTheme"
-                    android:theme="@style/MaterialTheme"
                     app:singleLine="true">
                     <com.google.android.material.chip.Chip
                         android:layout_width="wrap_content"
@@ -156,85 +227,67 @@
                         style="@style/Widget.MaterialComponents.Chip.Entry"
                         android:text="@string/app_name"
                         android:textSize="@dimen/text_margin"
-                        android:checkable="false"
-                        app:closeIconEnabled="true"/>
+                        app:chipIconEnabled="false"
+                        app:checkedIconEnabled="false"
+                        app:chipIcon="@color/colorRed"/>
                     <com.google.android.material.chip.Chip
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         style="@style/Widget.MaterialComponents.Chip.Entry"
                         android:text="@string/app_name"
-                        android:textSize="@dimen/text_margin"
-                        android:checkable="false"
-                        app:closeIconEnabled="true"/>
+                        android:textSize="@dimen/text_margin"/>
                     <com.google.android.material.chip.Chip
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         style="@style/Widget.MaterialComponents.Chip.Entry"
                         android:text="@string/app_name"
-                        android:textSize="@dimen/text_margin"
-                        android:checkable="false"
-                        app:closeIconEnabled="true"/>
+                        android:textSize="@dimen/text_margin"/>
                     <com.google.android.material.chip.Chip
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         style="@style/Widget.MaterialComponents.Chip.Entry"
                         android:text="@string/app_name"
-                        android:textSize="@dimen/text_margin"
-                        android:checkable="false"
-                        app:closeIconEnabled="true"/>
+                        android:textSize="@dimen/text_margin"/>
                 </com.google.android.material.chip.ChipGroup>
             </HorizontalScrollView>
 
-            <LinearLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginHorizontal="@dimen/text_margin"
-                android:layout_marginVertical="10dp"
-                android:weightSum="100">
-
-                <EditText
+                android:hint="@string/course_duration"
+                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+                android:id="@+id/ll3"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginTop="4dp"
+                app:boxBackgroundColor="@color/transparent"
+                app:suffixText="Class Hours (Approx.)">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/add_course_duration"
+                    android:inputType="textEmailAddress"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/course_duration"
-                    android:inputType="number"
-                    android:textColorHint="@color/colorGrey"
+                    android:textSize="16sp"
                     android:textColor="@color/colorBlack"
-                    android:background="@drawable/text_view_add_course"
-                    android:padding="10dp"
-                    android:layout_weight="50"
-                    android:id="@+id/add_course_duration"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="@string/class_hours"
-                    android:textColor="@color/colorBlack"
-                    android:autoSizeTextType="uniform"
-                    android:maxLines="1"
-                    android:gravity="center_vertical"
-                    android:layout_weight="50"
-                    android:textAlignment="textEnd"
-                    android:paddingEnd="@dimen/activity_horizontal_margin"
-                    android:paddingStart="10dp"
-                    tools:ignore="RtlCompat,RtlSymmetry" />
-
-            </LinearLayout>
+                    android:selectAllOnFocus="true"/>
+            </com.google.android.material.textfield.TextInputLayout>
 
             <ToggleButton
                 android:id="@+id/add_course_mode"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textOff="@string/offline"
                 android:textOn="@string/online"
                 android:layout_marginHorizontal="@dimen/text_margin"
                 android:layout_marginVertical="10dp"
-                android:background="@drawable/btn_multi_select"
+                android:paddingHorizontal="24dp"
+                android:layout_gravity="center"
                 android:elevation="100dp"
-                android:textColor="@color/colorWhite"
                 android:textSize="@dimen/text_margin"
+                android:textColor="@color/colorBlue"
                 android:textStyle="bold"
-                android:checked="true"/>
+                android:checked="true"
+                android:theme="@style/AppTheme"/>
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -405,19 +458,40 @@
             </RadioGroup>
 
             <!-- to be made visible only if charge a fee is checked -->
-            <EditText
+            <!--            <EditText-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:hint="@string/prompt_fees"-->
+            <!--                android:inputType="number"-->
+            <!--                android:textColorHint="@color/colorPrimaryDark"-->
+            <!--                android:textColor="@color/colorPrimaryDark"-->
+            <!--                android:background="@drawable/text_view_add_course"-->
+            <!--                android:padding="10dp"-->
+            <!--                android:layout_marginHorizontal="@dimen/text_margin"-->
+            <!--                android:layout_marginVertical="4dp"-->
+            <!--                android:id="@+id/course_fee"-->
+            <!--                android:visibility="gone"/>-->
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/prompt_fees"
-                android:inputType="number"
-                android:textColorHint="@color/colorPrimaryDark"
-                android:textColor="@color/colorPrimaryDark"
-                android:background="@drawable/text_view_add_course"
-                android:padding="10dp"
-                android:layout_marginHorizontal="@dimen/text_margin"
-                android:layout_marginVertical="4dp"
-                android:id="@+id/course_fee"
-                android:visibility="gone"/>
+                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+                android:id="@+id/ll4"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginTop="4dp"
+                app:boxBackgroundColor="@color/transparent"
+                app:prefixText="INR"
+                app:helperText="* This is what you wish to receive per student. The student will pay a small convenience fee over it.">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/course_fee"
+                    android:inputType="number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textColor="@color/colorBlack"
+                    android:selectAllOnFocus="true"/>
+            </com.google.android.material.textfield.TextInputLayout>
 
 
         </LinearLayout>
@@ -437,14 +511,15 @@
         android:id="@+id/add_course_progress"
         android:scaleY="2"/>
 
-
     <Button
         android:id="@+id/btnNext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_margin="24dp"
+        android:layout_above="@id/add_course_progress"
         android:background="@drawable/btn_blue"
+        android:backgroundTint="@color/button_green"
         android:textColor="@color/colorWhite"
         android:textSize="@dimen/text_margin"
         android:text="@string/next"
