--- a/app/src/main/res/layout-v26/class_card.xml
+++ b/app/src/main/res/layout-v26/class_card.xml
@@ -6,7 +6,11 @@
     android:layout_height="100dp"
     android:orientation="horizontal"
     android:padding="10dp"
-    android:id="@+id/card">
+    android:id="@+id/card"
+    android:background="@drawable/btn_blue"
+    android:backgroundTint="@color/colorYellow"
+    android:elevation="4dp"
+    android:layout_margin="10dp">
     <LinearLayout
         android:layout_width="100dp"
         android:layout_height="match_parent"
@@ -22,7 +26,9 @@
             android:typeface="sans"
             android:textColor="@color/colorPrimary"
             android:textStyle="bold"
-            android:id="@+id/month"/>
+            android:id="@+id/month"
+            android:singleLine="true"
+            android:ellipsize="end"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -44,14 +50,16 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:text="Introduction to data science!"
+            android:text="Introduction to data science! and more and more and more..."
             android:textAllCaps="true"
             android:autoSizeTextType="uniform"
             android:gravity="center"
             android:typeface="sans"
             android:textColor="@color/colorPrimary"
             android:textStyle="bold"
-            android:id="@+id/classTitle"/>
+            android:id="@+id/classTitle"
+            android:ellipsize="end"
+            android:singleLine="true"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0dp"
