--- a/app/src/main/res/layout/activity_add_course_payment.xml
+++ b/app/src/main/res/layout/activity_add_course_payment.xml
@@ -150,10 +150,12 @@
         android:layout_gravity="center"
         android:layout_margin="30dp"
         android:background="@drawable/btn_blue"
+        android:backgroundTint="@color/button_green"
         android:textSize="@dimen/text_margin"
         android:textColor="@color/colorWhite"
         android:textStyle="bold"
-        android:padding="@dimen/activity_horizontal_margin"
+        android:paddingVertical="@dimen/activity_horizontal_margin"
+        android:paddingHorizontal="24dp"
         android:text="@string/submit"
         android:clickable="true"
         android:focusable="true"
