--- a/app/src/main/res/layout/activity_get_started_as_teacher.xml
+++ b/app/src/main/res/layout/activity_get_started_as_teacher.xml
@@ -38,7 +38,8 @@
         android:id="@+id/btnGetStarted"
         android:layout_below="@id/img"
         android:background="@drawable/btn_blue"
+        android:backgroundTint="@color/button_green"
         android:paddingVertical="10dp"
-        android:paddingHorizontal="20dp"/>
+        android:paddingHorizontal="40dp"/>
 
 </RelativeLayout>
