--- a/app/src/main/res/layout/activity_class_teacher.xml
+++ b/app/src/main/res/layout/activity_class_teacher.xml
@@ -15,7 +15,8 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
         android:layout_marginVertical="10dp"
         android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-        android:id="@+id/ll1">
+        android:id="@+id/ll1"
+        app:startIconDrawable="@drawable/icon_calendar">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etDate"
             android:inputType="text"
@@ -33,7 +34,8 @@
         android:layout_marginVertical="10dp"
         android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
         android:id="@+id/ll2"
-        android:layout_below="@id/ll1">
+        android:layout_below="@id/ll1"
+        app:startIconDrawable="@drawable/icon_clock">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etStartTime"
             android:inputType="text"
@@ -51,7 +53,8 @@
         android:layout_marginVertical="10dp"
         android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
         android:id="@+id/ll3"
-        android:layout_below="@id/ll2">
+        android:layout_below="@id/ll2"
+        app:startIconDrawable="@drawable/icon_clock">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etEndTime"
             android:inputType="text"
