--- a/app/src/main/res/menu/registered_student_menu.xml
+++ b/app/src/main/res/menu/registered_student_menu.xml
@@ -4,6 +4,11 @@
     <group
         android:checkableBehavior="none">
         <item
+            android:id="@+id/assignments"
+            android:title="Assignments"
+            app:showAsAction="never"
+            />
+        <item
             android:id="@+id/menuItemNotifications"
             android:enabled="true"
             android:icon="@drawable/icon_notifications"
@@ -41,6 +46,7 @@
             android:icon="@drawable/icon_close"
             app:showAsAction="never"
             />
+
     </group>
 
 </menu>
