--- a/app/src/main/res/layout/activity_assignment.xml
+++ b/app/src/main/res/layout/activity_assignment.xml
@@ -10,7 +10,8 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="?attr/actionBarSize"
+        android:id="@+id/layout">
 
 <!--        <TextView-->
 <!--            android:id="@+id/title"-->
@@ -25,7 +26,7 @@
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:tabSelectedTextColor="@color/colorPrimary"
             app:tabIndicatorColor="@color/colorPrimary">
             <com.google.android.material.tabs.TabItem
@@ -54,7 +55,8 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/frameContainer">
+        android:id="@+id/frameContainer"
+        android:layout_below="@id/layout">
 
     </FrameLayout>
 
